tests/snapshots/assets__check_file@unit-func-spread.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/func/spread.typ
---
#let tree(
  root,
  draw-node: auto,
  draw-edge: auto,
  direction: "down",
  parent-position: "center",
  grow: 1,
  spread: 1,
  name: none,
  ..style,
) = { }

#let f = (..) => 1
