tests/snapshots/assets__check_file@unit-func-tight.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/func/tight.typ
---
#text(```typ
Test single arguments
```)

#let my-f(..args) = [#args]
#let arr = (1, 2, 3)
#my-f(..arr)
#my-f(..(
  11111111111,
  22222222222,
  33333333333,
  44444444444,
  55555555555,
  66666666666,
  77777777777,
  88888888888,
  99999999999,
))
