tests/snapshots/assets__check_file@unit-grid-array.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/grid/array.typ
---
#grid(
  columns: (
    60pt,
    1fr,
    2fr,
  ),
  rows: (
    auto,
    60pt,
  ),
  gutter: 3pt,
  rect[Fixed width, auto height],
  rect[1/3 of the remains],
  rect[2/3 of the remains],

  rect(height: 100%)[Fixed height],
  [image],
  [image],
)
