tests/snapshots/assets__check_file@unit-grid-array.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/grid/array.typ
snapshot_kind: text
---
#grid(
  columns: (60pt, 1fr, 2fr),
  rows: (auto, 60pt),
  gutter: 3pt,
  rect[Fixed width, auto height],
  rect[1/3 of the remains],
  rect[2/3 of the remains],

  rect(height: 100%)[Fixed height],
  [image],
  [image],
)
