tests/snapshots/assets__check_file@unit-grid-basic-cmt.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/grid/basic-cmt.typ
snapshot_kind: text
---
#table(columns: 2, [Name], [Age], [Hannes], [10], /* 1 */)
#table(
  columns: 2, [Name], [Age], [Hannes], [20], /* 2 */
)
#table(
  columns: 2, [Name], [Age], [Hannes], [30], /* 3 */
)
#table(
  columns: 2, [Name], [Age], /* 4 */ [Hannes], [40], /* 5 */
)
#table(columns: 2, [Name], [Age], /* 6 */ [Hannes], /* 7 */ [50],)
#table(
  columns: 2, [Name], /* 8 */ [Age], [Hannes], [60], // wwww
)


#table(
  columns: (auto, 1fr, auto), // aaa
  gutter: 3pt,
  [Name], [Age], [Strength], // bbb
  [Hannes], [36], [Grace],

  [Irma], [50], [Resourcefulness],


  [Vikram], [49], [Perseverance], // ccc
)
